@@ -296,6 +296,9 @@ CXamine::RemoveGate(UInt_t nSpectrum, UInt_t nId, GateType_t eType)
   case kgBand2d:
     GateType = Xamine_band;
     break;
+  case kgFitline:
+    GateType = fitline;
+    break;
   default:			// range error from kgCut1d ... kgBand2d
     throw CRangeError(kgCut1d, kgBand2d, eType,
 		      "Xamine::RemoveGate -- Mapping gate types");
